the aws bucket url in frontend and some changes in api

--- a/accounts/templates/otp_email.html
+++ b/accounts/templates/otp_email.html
@@ -39,7 +39,7 @@
                       >
                         <img
                           style="border: none; outline: none;width:60px"
-                          src="https://aiprojectfilestorage.s3.ap-southeast-2.amazonaws.com/icons/Screenshot+2023-10-01+at+10.40.56+AM.png"
+                          src="https://uffiafilestorage.s3.amazonaws.com/icons/Screenshot+2023-10-01+at+10.40.56+AM.png"
                           alt="AiContent"
                           class="AiContent"
                           data-bit="iit"
@@ -58,7 +58,7 @@
                         >
                           <img
                           style="border: none; outline: none;width:60px"
-                            src="https://aiprojectfilestorage.s3.ap-southeast-2.amazonaws.com/icons/Screenshot+2023-10-01+at+10.40.56+AM.png
+                            src="https://uffiafilestorage.s3.amazonaws.com/icons/Screenshot+2023-10-01+at+10.40.56+AM.png
                             alt="AIContent"
                             class=""
                             data-bit=""
